//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  userId String [unique]
  name String [not null]
  city String [not null, default: 'unknown']
  email String [unique, not null]
  password String [not null]
  role String [not null, default: 'user']
}

Table Category {
  categoryId String [pk]
  name String [unique, not null]
  products Product [not null]
  attributes CategoryAttribute [not null]
}

Table CategoryAttribute {
  attributeId String [pk]
  categoryId String [not null]
  name String [not null]
  type String [not null]
  category Category [not null]
  values ProductAttributeValue [not null]
}

Table Product {
  productId String [pk]
  title String [not null]
  description String [not null]
  categoryId String [not null]
  category Category [not null]
  images ProductImage [not null]
  prices ProductPrice [not null]
  attributes ProductAttributeValue [not null]
  stock ProductStock
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ProductImage {
  imageId String [pk]
  url String [not null]
  alt String
  productId String [not null]
  product Product [not null]
}

Table ProductPrice {
  priceId String [pk]
  productId String [not null]
  product Product [not null]
  price Int [not null]
  discount Int
  currency String [not null, default: 'USD']
  startsAt DateTime
  endsAt DateTime
  createdAt DateTime [default: `now()`, not null]
}

Table ProductStock {
  stockId String [pk]
  productId String [unique, not null]
  product Product [not null]
  quantity Int [not null]
  warehouse String [not null, default: 'default']
  updatedAt DateTime [not null]
}

Table ProductAttributeValue {
  valueId String [pk]
  productId String [not null]
  attributeId String [not null]
  value String [not null]
  product Product [not null]
  attribute CategoryAttribute [not null]
}

Ref: CategoryAttribute.categoryId > Category.categoryId

Ref: Product.categoryId > Category.categoryId

Ref: ProductImage.productId > Product.productId

Ref: ProductPrice.productId > Product.productId

Ref: ProductStock.productId - Product.productId

Ref: ProductAttributeValue.productId > Product.productId

Ref: ProductAttributeValue.attributeId > CategoryAttribute.attributeId